--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,36 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.yyp.sidebar.MainActivity"
     android:background="@color/grey">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/main_data_list"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="40dp"
+        android:background ="@color/grey_s">
+        <EditText
+            android:id="@+id/search_edit_text"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp"
+            android:background="@drawable/search_bg"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:textColor="#000000"
+            android:textSize="14sp"
+            android:hint="@string/search"
+            android:textColorHint="#373737"/>
+    </RelativeLayout>
 
-    <com.yyp.sidebar.widget.SideBar
-        android:id="@+id/main_sidebar"
-        android:layout_width="26dp"
-        android:layout_height="match_parent"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="40dp"
-        android:layout_marginBottom="60dp"/>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/main_data_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
-    <TextView
-        android:id="@+id/main_show_select_letter"
-        android:layout_width="65dp"
-        android:layout_height="65dp"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="80dp"
-        android:textColor="@android:color/white"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        android:gravity="center"
-        android:background="@drawable/oval_bg"
-        android:visibility="gone"/>
+        <com.yyp.sidebar.widget.SideBar
+            android:id="@+id/main_sidebar"
+            android:layout_width="26dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="right"
+            android:layout_marginTop="40dp"
+            android:layout_marginBottom="60dp"/>
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/main_show_select_letter"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:layout_gravity="right|center_vertical"
+            android:layout_marginRight="80dp"
+            android:textColor="@android:color/white"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:background="@drawable/oval_bg"
+            android:visibility="gone"/>
+    </FrameLayout>
+</LinearLayout>
