--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="grey">#f1f1f1</color>
+    <color name="grey_s">#d6d6d6</color>
     <color name="orange">#ffcc22</color>
 </resources>
